# dante

./: README.md  REAMDE.md  contributing.md  latin.csv  trans-csv.py
py/: dante.py  demo.py  latin.csv
rs/: Cargo.toml  schema.sql
rs/src/: main.rs  test.rs  util.rs
telegram/: dante.py  schema.sql  upsert.py
