[package]
name = "alejandro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.28", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
deepl = "0.4.1"
regex = "1.8.4"
lazy_static = "1.4.0"